# super_mario

./: .gitignore  README.md  build.bat  build.sh
src/: CMakeLists.txt  main.cpp
src/console/: cursor.cpp  cursor.hpp
src/controller/: CMakeLists.txt  game.cpp  game.hpp  ui_factory.hpp
src/controller/levels/: first_level.cpp
src/items/: CMakeLists.txt  ship.cpp  ship.hpp
src/levels/: CMakeLists.txt  first_level.cpp  first_level.hpp  game_level.cpp  game_level.hpp
src/model/: CMakeLists.txt  collisionable.cpp  collisionable.hpp  enemy.cpp  enemy.hpp  game_map.hpp  map_movable.hpp  mario.cpp  mario.hpp  movable.cpp  movable.hpp  rect.cpp  rect.hpp  rect_map_movable_adapter.hpp  shelf.hpp  ship.cpp  ship.hpp  ui_factory.hpp  uiobject.hpp
src/objects/: enemy.hpp
src/os_controls/: CMakeLists.txt
src/os_controls/linux/: CMakeLists.txt  linux_control_settings.cpp  linux_control_settings.hpp  linux_keyboard.cpp  linux_keyboard.hpp
src/os_controls/os_api/: keyboard.hpp  os_control_settings.hpp  user_key_input.hpp
src/os_controls/windows/: CMakeLists.txt  user_input.cpp  user_key_input.cpp  windows_control_settings.cpp  windows_control_settings.hpp  windows_keyboard.cpp  windows_keyboard.hpp
src/ui/: CMakeLists.txt  game_map.cpp  game_map.hpp
src/ui/console/: CMakeLists.txt  console_game_map.cpp  console_game_map.hpp  console_mario.cpp  console_mario.hpp  console_shelf.cpp  console_shelf.hpp  console_ship.cpp  console_ship.hpp  console_ui_factory.cpp  (+1 more)
src/util/: CMakeLists.txt  format.cpp  format.hpp  format_templates.cpp  logger.cpp  logger.hpp
(+1 files in other folders)
